<resources>
    <string name="app_name">Donut Tracker</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="static_shortcut_label_short">New Donut</string>
    <string name="static_shortcut_label_long">Create New Donut</string>
    <string name="static_shortcut_disabled_message">New Donut Shortcut Disabled</string>
    <string name="donut_name">Donut name</string>
    <string name="donut_description">Description</string>
    <string name="donut_rating">Rating</string>
    <string name="coffee_name">Coffee name</string>
    <string name="coffee_description">Description</string>
    <string name="coffee_rating">Rating</string>
    <string name="delete">delete</string>
    <string name="defaultChannel">DonutTracker default channel</string>
    <string name="notificationDescription">Notifications from DonutTracker</string>
    <string name="addDonutInfo">Add more donut info!</string>
    <string name="deepLinkNotificationTitle">Deep Link</string>
    <string name="donutName">donutName</string>
    <string name="donutPicture">Picture of donut</string>
    <string name="coffeeName">coffeeName</string>
    <string name="coffeePicture">Picture of a cup of coffee</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="rating">Rating</string>
    <string name="cont">Continue</string>
    <string name="welcomeText">Welcome to Donut Tracker 2</string>
    <string name="enable">Enable Coffee tracking?</string>
    <string name="settings">Settings</string>
    <string name="coffee_list">Coffee List</string>
    <string name="donut_list">Donut List</string>
    <string name="description">Select to enable coffee tracking features</string>

    <string name="floating_button_desc">Floating Button</string>
</resources>