<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/donutList">

    <fragment
        android:id="@+id/donutList"
        android:name="dev.chu.navigationui.donut.list.DonutListFragment"
        android:label="@string/donut_list">
        <action
            android:id="@+id/action_donutList_to_donutEntryDialogFragment"
            app:destination="@id/donutEntryDialog" />
    </fragment>

    <dialog
        android:id="@+id/donutEntryDialog"
        android:name="dev.chu.navigationui.donut.entry.DonutEntryDialogFragment"
        android:label="DonutEntryDialogFragment">
        <deepLink app:uri="myapp://navdonutcreator.com/donutcreator" />
        <argument
            android:name="itemId"
            android:defaultValue="-1L"
            app:argType="long" />
    </dialog>

    <fragment
        android:id="@+id/selectionFragment"
        android:name="dev.chu.navigationui.setup.SelectionFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_selection">
        <action
            android:id="@+id/action_selectionFragment_to_donutList"
            app:destination="@id/donutList" />
    </fragment>
    <fragment
        android:id="@+id/coffeeList"
        android:name="dev.chu.navigationui.coffee.list.CoffeeListFragment"
        android:label="@string/coffee_list">
        <action
            android:id="@+id/action_coffeeList_to_coffeeEntryDialogFragment"
            app:destination="@id/coffeeEntryDialogFragment" />
    </fragment>
    <dialog
        android:id="@+id/coffeeEntryDialogFragment"
        android:name="dev.chu.navigationui.coffee.entry.CoffeeEntryDialogFragment"
        android:label="CoffeeEntryDialogFragment">
        <argument
            android:name="itemId"
            android:defaultValue="-1L"
            app:argType="long" />
    </dialog>
</navigation>